test/mlir/exp_bad_case_0.mlir.stderr
test/mlir/exp_bad_case_0.mlir:5:8: error: exp input must be a float type
  %0 = colgm.exp %arg : tensor<i32>
       ^
